--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/dotenv": "^4.0.3",
     "@types/jest": "^22.1.3",
     "@types/koa": "^2.0.44",
     "@types/koa-bodyparser": "^4.2.0",
@@ -18,6 +19,7 @@
     "@types/koa2-cors": "^2.0.1",
     "@types/mongoose": "^5.0.13",
     "@types/node": "^9.4.6",
+    "dotenv": "^6.0.0",
     "koa": "^2.5.0",
     "koa-bodyparser": "^4.2.0",
     "koa-router": "^7.4.0",
